Twenty Nineteen: Correct center or right alignment for Download link in the File block.
Follow-up to [43808].

Props lakshyajeet, truptikanzariya, sabernhardt, sourabhjain, SirLouen, poojapadamad, SergeyBiryukov.
Fixes #59263.
Built from https://develop.svn.wordpress.org/trunk@61284


git-svn-id: http://core.svn.wordpress.org/trunk@60596 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -804,6 +804,16 @@
 				outline-offset: -4px;
 			}
 		}
+
+		&.aligncenter .wp-block-file__button {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		&.alignright .wp-block-file__button {
+			margin-left: auto;
+			margin-right: 0;
+		}
 	}
 
 	//! Code
